--- a/index.html
+++ b/index.html
@@ -1,13 +1,64 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Audio Recorder</title>
   </head>
+  <style type="text/css">
+    .main {
+      position: relative;
+      top: 90px;
+      bottom: 0px;
+      left: 35%;
+      border: 2px solid #000;
+      border-radius: 20px;
+      width: 20%;
+      /* height: 20px; */
+      padding: 40px 10px 10px 10px;
+      text-align: center;
+      background-color: #137a89;
+    }
+
+    .record #recordButton {
+      position: relative;
+      margin-top: 60px;
+      left: 20%;
+      padding: 10px 35px 10px 35px;
+      border-radius: 10px;
+      background-color: #137a89;
+      color: #fff;
+    }
+    .record #recordButton:hover {
+      color: #000;
+      background-color: #fff;
+    }
+    .stop #stopButton {
+      position: relative;
+      top: -37px;
+      right: 70px;
+      padding: 10px 35px 10px 35px;
+      border: 2px solid #000;
+      border-radius: 10px;
+      background-color: #137a89;
+      color: #fff;
+    }
+    .stop #stopButton:hover {
+      color: #000;
+      background-color: #fff;
+    }
+  </style>
   <body>
-    <button id="recordButton">Record</button>
-    <button id="stopButton" disabled>Stop</button>
-    <audio id="audioElement" controls></audio>
+    <div class="main">
+      <div class="audio">
+        <audio id="audioElement" controls></audio>
+      </div>
+      <div class="record">
+        <button id="recordButton">Record</button>
+      </div>
+      <div class="stop">
+        <button id="stopButton" disabled>Stop</button>
+      </div>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
