--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       left: 35%;
       border: 2px solid #000;
       border-radius: 20px;
-      width: 20%;
+      width: fit-content;
       /* height: 20px; */
       padding: 40px 10px 10px 10px;
       text-align: center;
